# saga

./: .gitignore  README.md  pyproject.toml
benchmark/: bench.py  bench_online.py
saga/: __main__.py  config.py
saga/engine/: block_manager.py  llm_engine.py  model_runner.py  scheduler.py  sequence.py
saga/layers/: attention.py  embed_head.py  rotary_embedding.py
saga/models/: qwen3.py  qwen3_5.py  register.py
saga/serving/: __init__.py  api_server.py  args.py  engine_client.py  launch.py  protocol.py
saga/utils/: loader.py
